# polite-betrayal

./: .gitignore  CLAUDE.md  Makefile  PHASE5_PLAN.md  README.md  bench.sh  docker-compose.yml  run_dev_api.sh  run_dev_ui.sh
api/: Dockerfile  Makefile  docker-compose.test.yml  go.mod  go.sum
benchmarks/: README.md  baseline-results.md  cicero-comparison-analysis.md  medium-vs-easy-2026-02-17.md  opening-book-analysis.md  rust-engine-opt-round2-2026-02-18.md  rust-engine-profile-2026-02-18.md  rust-engine-profile-post-opt-2026-02-18.md  rust-vs-medium-base-2026-02-18.md  rust-vs-medium-first-support-fix-2026-02-18.md  rust-vs-medium-pre-newmodel-2026-02-19.md  rust-vs-medium-progression-2026-02-18.md
data/: .gitignore  README.md  requirements.txt
engine/: Cargo.toml  build.rs
engine/benches/: engine_bench.rs
engine/docs/: DUI_PROTOCOL.md
engine/models/: .gitignore
engine/src/: engine.rs  lib.rs  main.rs  opening_book.rs  press.rs  selfplay.rs
engine/src/board/: adjacency.rs  mod.rs  order.rs  province.rs  state.rs  unit.rs
engine/src/eval/: heuristic.rs  mod.rs  neural.rs
engine/src/movegen/: build.rs  mod.rs  movement.rs  retreat.rs
engine/src/nn/: encoding.rs  mod.rs
engine/src/protocol/: dfen.rs  dson.rs  mod.rs  parser.rs
engine/src/resolve/: build.rs  kruijswijk.rs  mod.rs  phase.rs  retreat.rs
engine/src/search/: cartesian.rs  mod.rs  neural_candidates.rs  regret_matching.rs
engine/tests/: datc_tests.rs  integration.rs  profile.rs  profile_post_opt.rs  profile_simulate.rs
tasks/: 001_explore-bot-difficulty-scaling.done.md  (+117 more)
(+273 files in other folders)
